# lanedetect_ncnn

./: .gitignore  README.md
lanedetect_android_ncnn/: CMakeLists.txt  main.cpp
lanedetect_android_ncnn/include/: lane.hpp
lanedetect_android_ncnn/models/: mlsd_no_max_sigmoid_sim.param
lanedetect_android_ncnn/src/: lane.cpp
lanedetect_ncnn/: main.cpp
lanedetect_ncnn/include/: lane.hpp
lanedetect_ncnn/models/: mlsd_no_max_sigmoid_sim.onnx
lanedetect_ncnn/ncnn/: platform.h
lanedetect_ncnn/src/: lane.cpp
